# dbadmin

./: .dockerignore  .gitignore  Dockerfile  DockerfileLocal  LICENSE  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: build-deploy.yml
app/: __init__.py  docker_start.py  main.py
app/api/v1/: __init__.py
app/api/v1/alert/: __init__.py  alert.py
app/api/v1/apis/: __init__.py  buttons.py
app/api/v1/auditlog/: __init__.py  auditlog.py
app/api/v1/base/: __init__.py  base.py
app/api/v1/buttons/: __init__.py  buttons.py
app/api/v1/conn/: __init__.py  conn.py
app/controllers/: alert.py  api.py  auditlog.py  button.py  button_tmp.py  conn.py  dict.py  imptask.py  menu.py  oms.py  oplog.py  role.py  task.py  task_notify.py  user.py
app/core/: auditlog.py  celery_app.py  celery_runtime.py  config_loader.py  crud.py  dependency.py  init_app.py  middlewares.py
app/models/: __init__.py  admin.py  alert.py  conn.py  dict.py  enums.py  imptask.py  oplog.py  password.py  report.py  task.py  task_notify.py
app/schemas/: alert.py  apis.py  auditlog.py  base.py  buttons.py  conn.py  dict.py  imptask.py  login.py  menus.py  oms.py  operation.py  oplog.py  report.py  roles.py  task.py  task_notify.py  users.py  wms.py
app/services/: celery_dispatcher.py  conn_manager.py  conn_permission_service.py  db_connector.py  db_pool.py  excel_export_service.py  excelimp_service.py  fcc_relation_service.py  formatter_service.py  imptask_processor.py  notify_task_executor.py  order_service.py  oss_service.py  report_service.py  sim_service.py  simtrans.py  simtrans_task.py  sql_apply_service.py  sql_execution_service.py  task_scheduler.py  wecom_bot_service.py  wms_service.py
app/settings/: __init__.py  config.py  database.py
app/tasks/: celery_tasks.py
app/utils/: audit_log.py  encryption.py  password.py
config/: config.yml.example
deploy/: app_supervisor.conf  app_supervisor_with_nginx.conf  celery-healthcheck.sh  generate_nginx_conf.sh  supervisord.conf  supervisord_with_nginx.conf  web.conf  web.conf.template
migrations/models/: 0_20240927150631_init.py  1_20250527111634_update.py  2_20250527114202_update.py  3_20250530113744_update.py  4_20260304172356_add_excel_import_task.py  5_20260305085414_rename_excel_import_to_imptask.py  6_20260311114404_add_report_tables.py  7_20260318134727_add_sys_dict_table.py  8_20260319000000_add_menu_api_table.py  9_20260324000000_add_wms_menu.py
script/: docker-local-restart.ps1  dockerbuild.ps1  proc_ImportSimICCID.sql  redeploy.sh  run-dev.ps1
tests/: test_checkpoint_task6.py  test_excelimp_minimal.py  test_excelimp_service.py  test_field_names.py  test_final_checkpoint_task11.py  test_formatter_service.py  test_report_acceptance.py  test_report_basic.py  test_task_3_2_verification.py  test_task_4_1_endpoint.py  test_task_4_1_simple.py  test_task_4_2_error_handling.py  test_task_5_2_endpoint.py  test_task_5_2_simple.py  test_task_5_2_verification.py  test_task_5_3_format_options.py  test_task_7_2_verification.py  test_task_8_2_verification.py
web/: .env  .env.development  README.md  index.html  package-lock.json  package.json  vite.config.js
web/i18n/messages/: cn.json  en.json  index.js
web/public/: SimICCID.xlsx
web/public/resource/: loading.css  loading.js
web/settings/: theme.json
web/src/: main.js
web/src/api/: auditlog.js  button.js  index.js
web/src/composables/: useCRUD.js
web/src/directives/: permission.js
web/src/layout/: index.vue
(+91 files in other folders)
