[tool.poetry]
name = "dbadminn"
version = "0.1.0"
description = "数据库管理后台系统"
authors = ["wangcw <rubygreat@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
tortoise-orm = "^0.21.5"
asyncpg = "^0.29.0"
asyncmy = "^0.2.9"
pydantic = "^2.8.2"
email-validator = "^2.2.0"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.0"
loguru = "^0.7.2"
pydantic-settings = "^2.4.0"
argon2-cffi = "^23.1.0"
setuptools = "^72.2.0"
user-agents = "^2.2.0"

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.ruff]
line-length = 120
extend-select = [
  # "I",    # isort
#   "B",    # flake8-bugbear
#   "C4",   # flake8-comprehensions
#   "PGH",  # pygrep-hooks
  # "RUF",  # ruff
#   "W",    # pycodestyle
#   "YTT",  # flake8-2020
]
ignore = [
    "F403",
    "F405",
]