[tool.poetry]
name = "数据运维"
version = "0.1.0"
description = "数据库管理后台系统"
authors = ["wangcw <rubygreat@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
tortoise-orm = "^0.20.1"
pydantic = "^2.7.1"
email-validator = "^2.0.0.post2"
passlib = "^1.7.4"
pyjwt = "^2.7.0"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.281"
loguru = "^0.7.0"
pydantic-settings = "^2.0.3"
argon2-cffi = "^23.1.0"
pydantic-core = "^2.18.2"
annotated-types = "^0.6.0"
setuptools = "^70.0.0"
uvicorn = "^0.30.1"
h11 = "^0.14.0"
aerich = "^0.7.2"
asyncpg = "^0.29.0"
aiomysql = "^0.2.0"
requests = "^2.32.3"
apscheduler = "^3.11.0"
cryptography = "^45.0.3"
pytz = "^2025.2"
openpyxl = "^3.1.2"
pyyaml = "^6.0"
sqlparse = "^0.5.0"
pypinyin = "^0.53.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.ruff]
line-length = 120
extend-select = [
#   "I",    # isort
#   "B",    # flake8-bugbear
#   "C4",   # flake8-comprehensions
#   "PGH",  # pygrep-hooks
#   "RUF",  # ruff
#   "W",    # pycodestyle
#   "YTT",  # flake8-2020
]
ignore = [
    "F403",
    "F405",
]
[tool.aerich]
tortoise_orm = "app.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
